--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
     "expo": "^39.0.0",
+    "expo-barcode-scanner": "~9.0.0",
     "expo-font": "~8.3.0",
     "expo-status-bar": "~1.0.2",
     "expo-web-browser": "~8.5.0",
