--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "rss-reader",
-    "slug": "rss-reader",
+    "name": "Simple RSS Reader",
+    "slug": "simple-rss-reader",
     "version": "0.1.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
