--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo": "^39.0.0",
     "expo-barcode-scanner": "~9.0.0",
     "expo-font": "~8.3.0",
+    "expo-permissions": "~9.3.0",
     "expo-status-bar": "~1.0.2",
     "expo-web-browser": "~8.5.0",
     "react": "16.13.1",
