--- a/package.json
+++ b/package.json
@@ -8,31 +8,32 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^1.13.1",
+    "@react-native-async-storage/async-storage": "^1.13.3",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
-    "expo": "^39.0.0",
-    "expo-barcode-scanner": "~9.0.0",
-    "expo-font": "~8.3.0",
-    "expo-permissions": "~9.3.0",
-    "expo-status-bar": "~1.0.2",
-    "expo-web-browser": "~8.5.0",
+    "expo": "^40.0.0",
+    "expo-app-loading": "^1.0.1",
+    "expo-barcode-scanner": "~9.1.0",
+    "expo-font": "~8.4.0",
+    "expo-permissions": "~10.0.0",
+    "expo-status-bar": "~1.0.3",
+    "expo-web-browser": "~8.6.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.3.tar.gz",
-    "react-native-gesture-handler": "~1.7.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-gesture-handler": "~1.8.0",
     "react-native-reanimated": "~1.13.0",
-    "react-native-render-html": "^4.2.3",
+    "react-native-render-html": "^5.0.1",
     "react-native-rss-parser": "^1.4.0",
-    "react-native-safe-area-context": "3.1.4",
-    "react-native-screens": "~2.10.1",
-    "react-native-web": "~0.13.7",
-    "react-native-webview": "10.7.0"
+    "react-native-safe-area-context": "3.1.9",
+    "react-native-screens": "~2.15.0",
+    "react-native-web": "~0.13.12",
+    "react-native-webview": "11.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.6",
-    "babel-preset-expo": "^8.3.0"
+    "@babel/core": "~7.9.0",
+    "babel-preset-expo": "8.3.0"
   },
   "private": true
 }
