--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo-app-loading": "^1.0.1",
     "expo-barcode-scanner": "~9.1.0",
     "expo-constants": "~9.3.3",
+    "expo-file-system": "~9.3.0",
     "expo-font": "~8.4.0",
     "expo-permissions": "~10.0.0",
     "expo-status-bar": "~1.0.3",
